# fastapis

./: .pre-commit-config.yaml  Justfile  README.md  main.py  pyproject.toml
src/fastapis/: api.py  config.py  logging.py  main.py
src/fastapis/health/: views.py
src/fastapis/root/: views.py
tests/: conftest.py
